--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
         <form id="js-shopping-list-form">
             <label for="shopping-list-entry">Add an item</label>
-            <input type="text" name="shopping-list-entry" id="js-shopping-list-entry" placeholder="e.g., broccoli">
-            <button type="submit">Add item</button>
+            <input type="text" name="js-shopping-list-entry" placeholder="e.g., broccoli">
+            <button id="btnsubmit" type="submit">Add item</button>
         </form>
 
         <ul class="shopping-list js-shopping-list">            
