--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Shopping List</title>
+    <title>Shopping List</title>
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
-  <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
@@ -14,11 +14,11 @@
 
         <form id="js-shopping-list-form">
             <label for="shopping-list-entry">Add an item</label>
-            <input type="text" name="js-shopping-list-entry" placeholder="e.g., broccoli">
+            <input type="text" id="js-shopping-list-entry" name="shopping-list-entry" placeholder="e.g., broccoli">
             <button id="btnsubmit" type="submit">Add item</button>
         </form>
 
-        <ul class="shopping-list js-shopping-list">            
+        <ul class="shopping-list js-shopping-list">
         </ul>
     </div>
     <script src="//code.jquery.com/jquery.min.js"></script>
